--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "cmath": "cpp",
         "stdexcept": "cpp",
         "new": "cpp",
-        "array": "cpp"
+        "array": "cpp",
+        "string_view": "cpp"
     }
 }
